# fitmind

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  DOCUMENT_CLEANUP_ANALYSIS.md  DOCUMENT_CONSOLIDATION_REPORT.md  DOCUMENT_CONSOLIDATION_SUMMARY.md  MEAL_TYPE_SELECTION_FIX.md  Makefile  PROBLEM_SUMMARY_AND_SOLUTIONS.md  PROJECT_COLLABORATION_STANDARDS.md  README.md  TECHNICAL_DEBT.md  TEST_PROXY_COMMIT.md  development_plan.md  docker-compose.override.yml  docker-compose.yml  fix_frontend_base64.js  real_ai_app.py  story_1_5_assessment.md  test_ai_memory.py  test_app.py  test_dashboard.py  test_dashboard_complete.py  test_dashboard_simple.py  test_dinner_override.py  test_image_recognition.py  verify_sprint_5.py  verify_story_10_1.py  verify_story_10_2_10_3.py
backend/: API_SCHEMA_REVIEW_PLAN.md  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-test.txt  test_ai.py  test_ai_integration.py  test_all_endpoints.py  test_backend_simple.py  test_basic_endpoints.py  test_context_ai.py  test_context_management.py  test_full_backend.py  test_memory_system.py  test_users.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_memory_tables.py  003_add_role_switching.py  004_add_habit_goals.py  005_add_health_assessments.py  (+11 more)
backend/app/: main.py
backend/scripts/: create_admin.py  create_admin_simple.py  create_admin_user.py
backend/tests/: conftest.py  conftest_memory.py  factories.py  mocks.py  test_ai_role_integration.py  test_ai_role_services.py  test_auth.py  test_auth_api_validation.py  test_auth_performance.py  test_auth_service_units.py  test_basic.py  test_config.py  test_corrected_multi_day_behavior.py  test_dashboard.py  test_exercise_checkin.py  test_gamification.py  test_gamification_integration.py  test_habit_stats_api.py  test_health_assessment_api.py  test_meal_checkin.py  test_p1_p2_functional.py  test_p1_p2_services.py  test_real_database_integration.py  test_report_data_service.py
(+639 files in other folders)
